src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__edit_series_ui__edit_series_ui_tests__tests__snapshot_tests__edit_series_ui_renders_edit_series_modal.snap
---
source: src/ui/sonarr_ui/library/edit_series_ui_tests.rs
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                    ╭───────────────────────────  Edit - Test Series  ───────────────────────────╮                      
                    │                                                                            │                      
                    │                                                                            │                      
                    │                                                                            │                      
                    │                                    ╭───╮                                   │                      
                    │                         Monitored: ╰───╯                                   │                      
                    │                                    ╭───╮                                   │                      
                    │                     Season Folder: │   │                                   │                      
                    │                                    ╰───╯                                   │                      
                    │                                    ╭───────────────────────────────────╮   │                      
                    │                   Quality Profile: ╰───────────────────────────────────╯   │                      
                    │                                    ╭───────────────────────────────────╮   │                      
                    │                  Language Profile: │English                          ▼ │   │                      
                    │                                    ╰───────────────────────────────────╯   │                      
                    │                                    ╭───────────────────────────────────╮   │                      
                    │                       Series Type: ╰───────────────────────────────────╯   │                      
                    │                                    ╭───────────────────────────────────╮   │                      
                    │                              Path: │/tv/test                           │   │                      
                    │                                    ╰───────────────────────────────────╯   │                      
                    │                                    ╭───────────────────────────────────╮   │                      
                    │                              Tags: ╰───────────────────────────────────╯   │                      
                    ╰────────────────────────────────────────────────────────────────────────────╯
